--- a/test1.html
+++ b/test1.html
@@ -7,7 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-
+        div {
+            width: 100px;
+            height: 100px;
+            background: red;
+        }
     </style>
 </head>
 
