--- a/test1.html
+++ b/test1.html
@@ -19,7 +19,11 @@
     <div class="box">
         <p>怎么可能出现这种问题呢?</p>
         <div>
-            master(分支)
+            master(分支);
+            git branch wcp 创建分支
+            git checkout wcp 切换分支
+            git branch 查看当前处于哪个分支
+            git merge 合并分支
         </div>
         <div class="box"></div>
     </div>
