--- a/test1.html
+++ b/test1.html
@@ -29,7 +29,9 @@
     </div>
 </body>
 <script>
-    document.querySelector('.box').addEventListener('click')
+    document.querySelector('.box').addEventListener('click',function(){
+        this.style.background='blue';
+})
 </script>
 
 </html>
